--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"","client":"","tag":"!","case":"true","separator":"\\s+"}
+{"token":"NzA0OTkwNjUwNjMzOTQ1MTQ4.XqxKOQ.9kOLn3-_R_KkyOQii6IwK0tA0hI","client":"704990650633945148","tag":"-","case":"true","separator":"\\s+","ownerId":"382182385506058240"}
